fix: spacing on issue/PR list filters Broken following a markup / selector change most likely.

--- a/source/content.css
+++ b/source/content.css
@@ -26,8 +26,13 @@
 
 /* For `open-all-selected` and `pr-filters`: set a reduced padding for all buttons for #1830 and #1904 */
 .table-list-filters .table-list-header-toggle .select-menu-button {
-	padding-right: 8px;
-	padding-left: 8px;
+	padding-right: 0;
+	padding-left: 0;
+}
+
+.table-list-filters .details-reset {
+	padding-right: 8px !important;
+	padding-left: 8px !important;
 }
 
 /* Hide empty description of repo */
